# shell

./: .gitignore  LICENSE  README.md  pyproject.toml
tmux/: create_tmux_sessions.py  create_tmux_sessions.sh  tmux.conf.local
