[tool.poetry]
name = "shell"
version = "0.1.0"
description = ""
authors = ["Daniel Senften <daniel.senften@talent-factory.ch>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
